Add boolean liked property in getPostings
